frontend/src/components/footer/footer.css
.footer-fixed {
  position: fixed;
  left: 0;
  bottom: 0;
  display: flex;
  width: 100%;
  height: 40px;
  justify-content: space-evenly;
  background-color: #198274;
  z-index: 100;
}

.footer-wrap {
  display: flex;
  justify-content: space-between;
  align-content: center;
}

#footer-names {
  padding-left: 100px;
  font-size: 25px;
  padding-top: 4px;
  padding-right: 10px;
  display: inline-flex;
  align-items: center;
}

.footer-icons {
  font-size: 35px;
  color: white;
  padding-top: 3px;
}

